# Wike

./: README.md  Wike.doap  com.github.hugolabe.Wike.json  index.html  jsconfig.json  meson.build  settings
.github/workflows/: flatpak.yml
assets/: main.css  scripts.js
build-aux/flatpak/: com.github.hugolabe.Wike.json  python3-dbus-python.json  python3-requests.json
build-aux/meson/: postinstall.py
data/: com.github.hugolabe.Wike.SearchProvider.ini  com.github.hugolabe.Wike.SearchProvider.service.in  com.github.hugolabe.Wike.desktop.in  com.github.hugolabe.Wike.gresource.xml  com.github.hugolabe.Wike.gschema.xml  com.github.hugolabe.Wike.metainfo.xml.in  com.github.hugolabe.Wike.service.in  meson.build
data/gtk/: about.ui  bookmarks-menu.ui  bookmarks-row.ui  bookmarks.ui  dialogs.ui  help-overlay.ui  history-row.ui  history.ui  langlinks-row.ui  langlinks.ui  languages-row.ui  languages.ui  menu-article.ui  menu-main.ui  menu-view.ui  page-status.ui  page.ui  prefs.ui  search-row.ui  search-settings-row.ui  search-settings.ui  search.ui  sepia.css  shortcuts-dialog.ui  style-dark.css  style-sepia.css  style.css  suggestions.ui  theme-switcher.ui  toc-row.ui  toc.ui  window.ui  zoom-level.ui
data/languages/: languages.json  languages.min.json
data/styles/: dark.css  dark.min.css  sepia.css  sepia.min.css  view.css  view.min.css
data/ui/: about.ui  actionbar.ui  bookmarks-menu.ui  bookmarks-row.ui  bookmarks.ui  dialogs.ui  header-spinner.ui  header.ui  headerbar.ui  history-row.ui  history.ui  langlinks-row.ui  langlinks.ui  languages-row.ui  languages.ui  menu-article.ui  menu-main.ui  menu-view.ui  menu.css  menu.ui  page.ui  prefs-row.ui  prefs.ui  projects-row.ui  projects.ui  search-row.ui  search-settings-row.ui  search-settings.ui  search.ui  sepia.css  shortcuts.ui  suggestions.ui  theme-switcher.ui  toc-row.ui  toc.ui  widgets.css  window.ui  zoom-level.ui
debian/: changelog  control  copyright  files
debian/upstream/: metadata
media/: wike-video.webm
po/: LINGUAS  POTFILES  ar.po  bg.po  bn.po  ca.po  cs.po  de.po  el.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kk.po  ko.po  kw.po  nl.po  oc.po  pl.po  pt_BR.po  ru.po  sv.po  ta.po  tr.po  uk.po  ur.po  vi.po  wike.pot  (+3 more)
src/: application.py  bookmarks.py  data.py  header.py  history.py  langlinks.py  languages.py  menu.py  meson.build  page.py  prefs.py  projects.py  search.py  toc.py  view.py  wike-sp.in  wike.in  wikipedia.py  window.py
